@@ -1,3 +1,7 @@
+2005-01-19 Mikhail Khodjaiants
+	Fix for bug 83051: Add global variables deletes existing ones when new added.
+	* AddGlobalsActionDelegate.java
+
 2004-12-03 Mikhail Khodjaiants
 	Fix for bug 62659: Unable to set default for register format via plugin_customization.ini.
 	* CDebugPreferencePage.java
